add *.py, *.txt. *.tsv and *.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-新着イベント一覧_files
-new_event_list.html
-*.zip
 3
+__pycache__
+.vscode
+
+*.zip
+*_files
+
+output_*.csv
+output_*.yaml
+config.yaml
+
+a.html
+x.py
+link2.py
+
+new_event_list.html
+new_event_list.html
